--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <main class="wrapper">
         <ul class="login">
             <li class="login__img">
-                <img src="../../../public/images/Lobby/平台svg/lobby_logo.svg" alt="lobby_logo">
+                <img src="../images/Lobby/平台svg/lobby_logo.svg" alt="lobby_logo">
             </li>
             <li class="login__subtitle">
                 <span class="login__subtitle__line"></span><p class="login__subtitle__text">登入</p><span class="login__subtitle__line"></span>
@@ -24,12 +24,12 @@
             </li>
             <li class="login__errorMessage">
                 <p class="login__errorMessage__word" v-show="isLoading">
-                <span><img class="login__errorMessage__icon" src="../../../public/images/Lobby/平台svg/loginpage_error.svg" alt=""></span>帳號密碼有誤
+                    <span><img class="login__errorMessage__icon" src="../images/Lobby/平台svg/loginpage_error.svg" alt=""></span>帳號密碼有誤
                 </p>
             </li>
             <li class="login__btn" >
-                <a href="#" class="login__btn__submit" @click.prevent="onClick">
-                <img src="../../../public/images/Lobby/平台svg/btn_login_normal.svg" alt="">
+                <a href="#" class="login__btn__submit">
+                    <img src="../images/Lobby/平台svg/btn_login_normal.svg" alt="">
                 </a>
             </li>
         </ul>
