登入頁面需要新增事件

--- a/login.html
+++ b/login.html
@@ -23,16 +23,20 @@
                 <input class="login__input__content" type="text" placeholder="密碼">
             </li>
             <li class="login__errorMessage">
-                <p class="login__errorMessage__word" v-show="isLoading">
-                    <span><img class="login__errorMessage__icon" src="../images/Lobby/平台svg/loginpage_error.svg" alt=""></span>帳號密碼有誤
+                <p class="login__errorMessage__word">
+                    <span><img class="login__errorMessage__icon" src="../images/Lobby/平台svg/loginpage_error.svg" alt="..."></span>帳號密碼有誤
                 </p>
             </li>
             <li class="login__btn" >
                 <a href="#" class="login__btn__submit">
-                    <img src="../images/Lobby/平台svg/btn_login_normal.svg" alt="">
+                    <img src="../images/Lobby/平台svg/btn_login_normal.svg" alt="...">
                 </a>
             </li>
         </ul>
     </main>
+    <script src="./js/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="./js/all.js"></script>
 </body>
 </html>
