--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,7 @@
         <li class="search__group">
           <p class="search__group__text">查詢時間：</p>
           <div class="d-flex justify-content-space-between align-items-center">
-            <input type="text" id="datepicker1" style="
+            <input type="text" id="datepicker1" placeholder="" style="
               margin-right: calc(.01rem + 1.5vh);
               width: calc(1rem + 5vh);
               line-height: .4rem;
