--- a/login.html
+++ b/login.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <main class="wrapper">
+        <div class="loading">
+            <img src="./images/Lobby/lobby_loading.gif" alt="">
+        </div>
         <ul class="login">
             <li class="login__img">
                 <img src="./images/Lobby/平台svg/lobby_logo.svg" alt="lobby_logo">
