新增login 點擊事件

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                 </p>
             </li>
             <li class="login__btn" >
-                <a href="#" class="login__btn__submit">
+                <a href="#" class="login__btn__submit" click="loginSubmit">
                     <img src="./images/Lobby/平台svg/btn_login_normal.svg" alt="...">
                 </a>
             </li>
